@@ -39,9 +39,12 @@ public class Footprints implements Listener {
         } else if (event.getPlayer().getLocation().getY() != below.getY() + 1)
             return;
 
-        if(CraftBookPlugin.inst().getConfiguration().footprintsBlocks.contains(new Integer(below.getTypeId()))) {
+        if(CraftBookPlugin.inst().getConfiguration().footprintsBlocks.contains(Integer.valueOf(below.getTypeId()))) {
 
             if(footsteps.contains(event.getPlayer().getName()))
+                return;
+
+            if(!event.getPlayer().hasPermission("craftbook.mech.footprints.use"))
                 return;
 
             try {
@@ -56,6 +59,10 @@ public class Footprints implements Listener {
                 .write(6, 0F);
                 packet.getIntegers().write(0, 1);
                 for (Player play : CraftBookPlugin.inst().getServer().getOnlinePlayers()) {
+                    if(!play.canSee(event.getPlayer()))
+                        continue;
+                    if(!play.hasPermission("craftbook.mech.footprints.see"))
+                        continue;
                     if (play.getWorld().equals(event.getPlayer().getPlayer().getWorld())) {
                         try {
                             ProtocolLibrary.getProtocolManager().sendServerPacket(play, packet);
